--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,13 @@
 layout: null
 ---
 
-@import url("https://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css");
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap');
 @import url("pygment_highlights.css");
 
 /* --- General --- */
 
 body {
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   font-size: 18px;
   color: #404040;
   position: relative;
@@ -23,7 +23,7 @@ p {
   margin: 30px 0;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   font-weight: 800;
 }
 a {
@@ -58,7 +58,7 @@ hr.small {
 }
 
 .main-explain-area {
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   padding: 15px inherit;
 }
 
@@ -109,7 +109,7 @@ img {
 .navbar-custom {
   background-color: {{ site.navbar-col }};
   border-bottom: 1px solid #EAEAEA;
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   {% if site.navbar-img %}
   background-image: url({{ site.navbar-img | relative_url }});
   background-attachment: fixed;
@@ -286,7 +286,7 @@ footer .list-inline {
   padding: 0;
 }
 footer .copyright {
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   text-align: center;
   margin-bottom: 0;
 }
@@ -352,7 +352,7 @@ footer .theme-by {
   margin: 0 0 10px;
 }
 .post-preview .post-entry {
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 .post-entry-container {
   display: inline-block;
@@ -389,7 +389,7 @@ footer .theme-by {
 /* --- Tags --- */
 
 .blog-tags {
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   color: #999;
   font-size: 15px;
   margin-bottom: 30px;
@@ -482,7 +482,7 @@ footer .theme-by {
   font-size: 27px;
   line-height: 1.1;
   display: block;
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   font-weight: 300;
   margin: 10px 0 0;
 }
@@ -507,7 +507,7 @@ footer .theme-by {
   padding: 5px 10px;
   font-size: 11px;
   color: #EEE;
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   right: 0;
   bottom: 0;
   display: none;
@@ -591,7 +591,7 @@ footer .theme-by {
 /* --- Pager --- */
 
 .pager li a {
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
@@ -771,7 +771,7 @@ pre {
 }
 
 #full-tags-list {
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 
 #full-tags-list .tag-entry {
