--- a/css/normalize.css
+++ b/css/normalize.css
@@ -7,7 +7,7 @@
  */
 
 html {
-  font-family: 'Nanum Gothic Coding', serif; /* 1 */
+  font-family: 'Nanum Gothic', sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -230,7 +230,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: 'Nanum Gothic Coding', serif;
+  font-family: 'Nanum Gothic', sans-serif;
   font-size: 1em;
 }
 
