--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,7 @@ img {
 }
 @media only screen and (min-width: 768px) {
   .navbar-custom .nav .navlinks-container {
-    text-align: left;
+    text-align: right;
   }
   .navbar-custom .nav .navlinks-container:hover {
     background: rgba(0, 0, 0, 0.1);
