--- a/_layouts/새 폴더/main.html
+++ b/_layouts/새 폴더/main.html
@@ -14,11 +14,7 @@
 {% include main-banner.html %}
 {% endif %}
 
-{% if page.url == '/about/' %}
-{% include about-banner.html %}
-{% endif %}
-
-{% if page.url == '/recruit/' %}
+{% if page.url == '/project/' %}
 {% include recruit-banner.html %}
 {% endif %}
 
