--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -9,8 +9,7 @@
 
   <div class="aboutme_section">
     <div class="aboutme_greeting">
-      안녕하세요, 어제보다 더 성장할 나를 위해 노력하는 김영찬입니다.<br>
-      현재 한국전자기술연구원에서 디지털 트윈 분야를 연구하고 있습니다.
+      안녕하세요, 어제보다 더 성장할 나를 위해 노력하는 김영찬 입니다. 현재 한국전자기술연구원에서 디지털 트윈 분야를 연구하고 있습니다.
       <div class="aboutme_greeting_subdiv">
         <div class="aboutme_greeting_subtitle">SNS</div>
         <div class="text_badge" id="aboutme_badge_github">
@@ -28,6 +27,10 @@
         <div class="text_badge" id="aboutme_badge_solvedac">
           <span class="text_badge_head"><i class="fas fa-code"></i></span>
           <span class = "text_badge_content">solved.ac</span>
+        </div>
+        <div class="text_badge" id="aboutme_badge_steam">
+          <span class="text_badge_head"><i class="fab fa-steam-symbol"></i></span>
+          <span class = "text_badge_content">steam</span>
         </div>
       </div>
     </div>
@@ -51,6 +54,11 @@
       aboutme_badge_solvedac = document.getElementById('aboutme_badge_solvedac')
       aboutme_badge_solvedac.addEventListener('click', () => {
         location.href = "https://solved.ac/profile/kimyc1223"
+      })
+
+      aboutme_badge_steam = document.getElementById('aboutme_badge_steam')
+      aboutme_badge_steam.addEventListener('click', () => {
+        location.href = "https://steamcommunity.com/id/kimyc1223?l=korean"
       })
     </script>
   </div>
@@ -113,7 +121,7 @@
             </tr>
             <tr>
               <td>2018.09 ~ 현재</td>
-              <td>한국전자기술연구원 에너지IT융합연구센터</td>
+              <td>KETI 에너지IT융합연구센터</td>
               <td>연구원</td>
             </tr>
           </table>
@@ -130,9 +138,9 @@
         <span class="aboutme_badge_name">C#</span>
 
         <ul class="aboutme_badge_desc badge-left">
-          <li>ㅡ Windows / WebGL / 안드로이드 / iOS에서 다양한 개발 경험이 있습니다.</li>
-          <li>ㅡ 각종 라이브러리를 다룰 수 있고, 다른 서비스와 연동하여 개발 할 수 있습니다.</li>
-          <li>ㅡ GitHub에 직접 구현한 오픈소스 라이브러리를 공개하고 관리하고 있습니다.</li>
+          <li>ㅡ C#에서 지향하는 객체지향 프로그래밍에 맞춰 작업 할 수 있습니다.</li>
+          <li>ㅡ .NET프레임워크를 사용하여 Windows에서 GUI프로그램을 개발할 수 있습니다.</li>
+          <li>ㅡ OpenCV 라이브러리를 사용하여 CV 문제를 해결 할 수 있습니다.</li>
         </ul>
       </div>
 
@@ -152,9 +160,9 @@
         <span class="aboutme_badge_name">3ds Max</span>
 
         <ul class="aboutme_badge_desc badge-left2">
-          <li>ㅡ Windows / WebGL / 안드로이드 / iOS에서 다양한 개발 경험이 있습니다.</li>
-          <li>ㅡ 각종 라이브러리를 다룰 수 있고, 다른 서비스와 연동하여 개발 할 수 있습니다.</li>
-          <li>ㅡ GitHub에 직접 구현한 오픈소스 라이브러리를 공개하고 관리하고 있습니다.</li>
+          <li>ㅡ 주어진 도면이나 물체를 보고 3D 모델링을 할 수 있습니다.</li>
+          <li>ㅡ 3D 환경 구성에 필요한 간단한 그래픽 작업을 할 수 있습니다.</li>
+          <li>ㅡ 쉐이더 / 머터리얼 / 쉐이더그래프를 이해하고 사용 할 수 있습니다.</li>
         </ul>
       </div>
 
@@ -163,9 +171,19 @@
         <span class="aboutme_badge_name">Git</span>
 
         <ul class="aboutme_badge_desc badge-center1">
-          <li>ㅡ Windows / WebGL / 안드로이드 / iOS에서 다양한 개발 경험이 있습니다.</li>
-          <li>ㅡ 각종 라이브러리를 다룰 수 있고, 다른 서비스와 연동하여 개발 할 수 있습니다.</li>
-          <li>ㅡ GitHub에 직접 구현한 오픈소스 라이브러리를 공개하고 관리하고 있습니다.</li>
+          <li>Github 등급 (API : <span id="git_state" style="color:yellow; cursor:pointer;">Github Readme Stats</span> )</li>
+          <img src = "https://github-readme-stats.vercel.app/api?username=kimyc1223&amp;count_private=true&amp;hide=contribs,prs&amp;show_icons=true&amp;theme=vue-dark" id="my_git_state" style ="cursor:pointer;">
+          <script>
+            git_state = document.getElementById('git_state')
+            git_state.addEventListener('click', () => {
+              location.href="https://github.com/anuraghazra/github-readme-stats";
+            })
+
+            my_git_state = document.getElementById('my_git_state')
+            my_git_state.addEventListener('click', () => {
+              location.href="https://github.com/KimYC1223";
+            })
+          </script>
         </ul>
       </div>
 
@@ -174,9 +192,9 @@
         <span class="aboutme_badge_name">Web</span>
 
         <ul class="aboutme_badge_desc badge-center2">
-          <li>ㅡ Windows / WebGL / 안드로이드 / iOS에서 다양한 개발 경험이 있습니다.</li>
-          <li>ㅡ 각종 라이브러리를 다룰 수 있고, 다른 서비스와 연동하여 개발 할 수 있습니다.</li>
-          <li>ㅡ GitHub에 직접 구현한 오픈소스 라이브러리를 공개하고 관리하고 있습니다.</li>
+          <li>ㅡ HTML5과 CSS3를 이해하고 반응형 웹사이트를 만들 수 있습니다.</li>
+          <li>ㅡ Jekyll을 통해 github page 기반 개발 블로그를 운영할 수 있습니다.</li>
+          <li>ㅡ 개발 블로그의 테마 디자인을 직접 수정하여 사용할 수 있습니다.</li>
         </ul>
       </div>
 
@@ -185,9 +203,9 @@
         <span class="aboutme_badge_name">Javascript</span>
 
         <ul class="aboutme_badge_desc badge-right2">
-          <li>ㅡ Windows / WebGL / 안드로이드 / iOS에서 다양한 개발 경험이 있습니다.</li>
-          <li>ㅡ 각종 라이브러리를 다룰 수 있고, 다른 서비스와 연동하여 개발 할 수 있습니다.</li>
-          <li>ㅡ GitHub에 직접 구현한 오픈소스 라이브러리를 공개하고 관리하고 있습니다.</li>
+          <li>ㅡ 개발하고자 하는 웹 페이지의 동작을 구현 할 수 있습니다.</li>
+          <li>ㅡ AngularJS, React.JS를 활용하여 동적인 웹페이지를 구현 할 수 있습니다.</li>
+          <li>ㅡ 개발문서를 읽고 원하는 기능을 개발할 수 있습니다.</li>
         </ul>
       </div>
 
@@ -196,9 +214,9 @@
         <span class="aboutme_badge_name">Node.js</span>
 
         <ul class="aboutme_badge_desc badge-right2">
-          <li>ㅡ Windows / WebGL / 안드로이드 / iOS에서 다양한 개발 경험이 있습니다.</li>
-          <li>ㅡ 각종 라이브러리를 다룰 수 있고, 다른 서비스와 연동하여 개발 할 수 있습니다.</li>
-          <li>ㅡ GitHub에 직접 구현한 오픈소스 라이브러리를 공개하고 관리하고 있습니다.</li>
+          <li>ㅡ NodeJS로 RestAPI 백엔드 서버를 구축할 수 있습니다.</li>
+          <li>ㅡ 어플리케이션 DB 서버와 개발자 대시보드를 구현 할 수 있습니다.</li>
+          <li>ㅡ 웹소켓을 이용한 IP 프로토콜 서버를 구축 할 수 있습니다.</li>
         </ul>
       </div>
 
@@ -207,12 +225,85 @@
         <span class="aboutme_badge_name">Python</span>
 
         <ul class="aboutme_badge_desc badge-right">
-          <li>ㅡ Windows / WebGL / 안드로이드 / iOS에서 다양한 개발 경험이 있습니다.</li>
-          <li>ㅡ 각종 라이브러리를 다룰 수 있고, 다른 서비스와 연동하여 개발 할 수 있습니다.</li>
-          <li>ㅡ GitHub에 직접 구현한 오픈소스 라이브러리를 공개하고 관리하고 있습니다.</li>
+          <li>ㅡ PyQT, tkinter 라이브러를 활용해 GUI프로그램을 개발 할 수 있습니다.</li>
+          <li>ㅡ OpenCV 라이브러리를 이용해 CV문제를 해결 할 수 있습니다.</li>
+          <li>ㅡ Python 프로젝트를 분석하여 다른 프로그래밍 언어로 컨버팅 할 수 있습니다.</li>
         </ul>
       </div>
+    </div>
+  </div>
 
+  <div class="aboutme_section">
+    <div class = "aboutme_extra_section">
+      <div class="aboutme_section_title">진행한 프로젝트</div>
+      작성중
+    </div>
+  </div>
+
+  <div class="aboutme_section">
+    <div class = "aboutme_extra_section">
+      <div class="aboutme_section_title">국내 및 해외 논문</div>
+      작성중
+    </div>
+  </div>
+
+  <div class="aboutme_section">
+    <div class = "aboutme_extra_section">
+      <div class="aboutme_section_title">개인 프로젝트</div>
+      작성중
+    </div>
+  </div>
+
+  <div class="aboutme_section">
+    <div class = "aboutme_toy_section">
+      <div class="aboutme_section_title">토이 프로젝트</div>
+      작성중
+    </div>
+  </div>
+
+  <div class="aboutme_section">
+    <div class = "aboutme_toy_section">
+      <div class="aboutme_section_title">오픈소스</div>
+      작성중
+    </div>
+  </div>
+
+  <div class="aboutme_section">
+    <div class = "aboutme_extra_section">
+      <div class="aboutme_section_title">대외 활동</div>
+      <div class="aboutme_extra_card">
+        <table>
+          <tr>
+            <td class="aboutme_extra_card_img_td">
+              <a href="https://www.facebook.com/permalink.php?story_fbid=885174618175802&id=100000498178589"><img src="./img/ESC.jpg" class="aboutme_extra_card_img"></a>
+            </td>
+            <td class="aboutme_extra_card_img_td2">
+              <span class="aboutme_extra_card_name">E.S.C.</span>
+              <span class="aboutme_extra_card_sub">전자회로연구회</span>
+              <span class="aboutme_extra_card_role">35기 회장</span>
+              <span class="aboutme_extra_card_period">2013.03 - 2020.02</span>
+              <span class="aboutme_extra_card_desc">교내 중앙 학술동아리 전자회로 연구회 (Electronic-circuit Study Circle) 35기수 운영</span>
+            </td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="aboutme_extra_card">
+        <table>
+          <tr>
+            <td class="aboutme_extra_card_img_td">
+              <a href="https://www.facebook.com/permalink.php?story_fbid=2205752936117957&id=100000498178589"><img src="./img/Realizer.jpg"></a>
+            </td>
+            <td class="aboutme_extra_card_img_td2">
+              <span class="aboutme_extra_card_name">Realizer</span>
+              <span class="aboutme_extra_card_sub">컨텐츠 제작 동호회</span>
+              <span class="aboutme_extra_card_role">테크니션</span>
+              <span class="aboutme_extra_card_period">2018.01 - 2018.06</span>
+              <span class="aboutme_extra_card_desc">"추리게임 : 폴리스라인 안으로"의 기술 소품담당</span>
+            </td>
+          </tr>
+        </table>
+      </div>
     </div>
   </div>
 
@@ -244,8 +335,8 @@
           location.href = "mailto:kim.youngchan@yonsei.ac.kr"
         })
 
-        side_bar_github = document.getElementById('side_bar_github')
-        side_bar_github.addEventListener('click', () => {
+        aboutme_telegram = document.getElementById('aboutme_telegram')
+        aboutme_telegram.addEventListener('click', () => {
           location.href = "https://t.me/kim_youngchan"
         })
       </script>
