--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -89,41 +89,22 @@
         <div class="aboutme_greeting_subdiv">
           <div class="aboutme_edu_subtitle">학력 사항</div>
           <table class="aboutme_edu_table">
-            <tr class="aboutme_edu_table_head">
-              <td>기간</td>
-              <td>학교</td>
-              <td>전공</td>
-              <td>학위</td>
-              <td class="aboutme_edu_table_extra">비고</td>
+            <tr class="aboutme_edu_table_head"> <td>기간</td> <td>학교</td> <td>전공</td> <td>학위</td> <td class="aboutme_edu_table_extra">비고</td>
             </tr>
-            <tr>
-              <td>2013.03 ~ 2020.02</td>
-              <td>한국항공대학교</td>
-              <td>전자및항공전자공학</td>
-              <td>학사</td>
-              <td class="aboutme_edu_table_extra">우등졸업</td>
-            </tr>
-            <tr>
-              <td>2020.03 ~ 2022.02</td>
-              <td>연세대학교</td>
-              <td>컴퓨터 과학</td>
-              <td>석사</td>
-              <td class="aboutme_edu_table_extra">산학연과정(KETI)</td>
-            </tr>
+            {% assign education = site.data.edu %}
+            {% for edu in education %}
+            <tr> <td>{{ edu.period }}</td> <td>{{ edu.school }}</td> <td>{{ edu.major }}</td> <td>{{ edu.degree }}</td>
+                 <td class="aboutme_edu_table_extra">{{ edu.remark }}</td> </tr>
+            {% endfor %}
           </table>
 
           <div class="aboutme_edu_subtitle">경력 사항</div>
           <table class="aboutme_edu_table">
-            <tr class="aboutme_edu_table_head">
-              <td>기간</td>
-              <td>기관 명</td>
-              <td>직책</td>
-            </tr>
-            <tr>
-              <td>2018.09 ~ 현재</td>
-              <td>KETI 에너지IT융합연구센터</td>
-              <td>연구원</td>
-            </tr>
+            <tr class="aboutme_edu_table_head"> <td>기간</td> <td>기관 명</td> <td>직책</td> </tr>
+            {% assign careers = site.data.career %}
+            {% for career in careers %}
+            <tr> <td>{{ career.period }}</td> <td>{{ career.com }}</td> <td>{{ career.position }}</td> </tr>
+            {% endfor %}
           </table>
       </div>
     </div>
@@ -133,123 +114,65 @@
     <div class = "aboutme_edu">
       <div class="aboutme_section_title">기술 스택</div>
 
+      {% assign stacks = site.data.stack%}
+      {% for stack in stacks %}
       <div class="aboutme_stack_cards">
-        <img src="./img/Badge_CS.png">
-        <span class="aboutme_badge_name">C#</span>
-
-        <ul class="aboutme_badge_desc badge-left">
-          <li>ㅡ C#에서 지향하는 객체지향 프로그래밍에 맞춰 작업 할 수 있습니다.</li>
-          <li>ㅡ .NET프레임워크를 사용하여 Windows에서 GUI프로그램을 개발할 수 있습니다.</li>
-          <li>ㅡ OpenCV 라이브러리를 사용하여 CV 문제를 해결 할 수 있습니다.</li>
-        </ul>
+        <img src="{{ stack.img }}">
+        <span class="aboutme_badge_name">{{ stack.name }}</span>
+        {{ stack.content }}
       </div>
+      {% endfor %}
+    </div>
+  </div>
 
-      <div class="aboutme_stack_cards">
-        <img src="./img/Badge_Unity.png">
-        <span class="aboutme_badge_name">Unity</span>
-
-        <ul class="aboutme_badge_desc badge-left2">
-          <li>ㅡ Windows / WebGL / 안드로이드 / iOS에서 다양한 개발 경험이 있습니다.</li>
-          <li>ㅡ 각종 라이브러리를 다룰 수 있고, 다른 서비스와 연동하여 개발 할 수 있습니다.</li>
-          <li>ㅡ GitHub에 직접 구현한 오픈소스 라이브러리를 공개하고 관리하고 있습니다.</li>
-        </ul>
-      </div>
-
-      <div class="aboutme_stack_cards">
-        <img src="./img/Badge_3dsmax.png">
-        <span class="aboutme_badge_name">3ds Max</span>
-
-        <ul class="aboutme_badge_desc badge-left2">
-          <li>ㅡ 주어진 도면이나 물체를 보고 3D 모델링을 할 수 있습니다.</li>
-          <li>ㅡ 3D 환경 구성에 필요한 간단한 그래픽 작업을 할 수 있습니다.</li>
-          <li>ㅡ 쉐이더 / 머터리얼 / 쉐이더그래프를 이해하고 사용 할 수 있습니다.</li>
-        </ul>
-      </div>
-
-      <div class="aboutme_stack_cards">
-        <img src="./img/Badge_Git.png">
-        <span class="aboutme_badge_name">Git</span>
-
-        <ul class="aboutme_badge_desc badge-center1">
-          <li>Github 등급 (API : <span id="git_state" style="color:yellow; cursor:pointer;">Github Readme Stats</span> )</li>
-          <img src = "https://github-readme-stats.vercel.app/api?username=kimyc1223&amp;count_private=true&amp;hide=contribs,prs&amp;show_icons=true&amp;theme=vue-dark" id="my_git_state" style ="cursor:pointer;">
-          <script>
-            git_state = document.getElementById('git_state')
-            git_state.addEventListener('click', () => {
-              location.href="https://github.com/anuraghazra/github-readme-stats";
-            })
-
-            my_git_state = document.getElementById('my_git_state')
-            my_git_state.addEventListener('click', () => {
-              location.href="https://github.com/KimYC1223";
-            })
-          </script>
-        </ul>
-      </div>
-
-      <div class="aboutme_stack_cards">
-        <img src="./img/Badge_Web.png">
-        <span class="aboutme_badge_name">Web</span>
-
-        <ul class="aboutme_badge_desc badge-center2">
-          <li>ㅡ HTML5과 CSS3를 이해하고 반응형 웹사이트를 만들 수 있습니다.</li>
-          <li>ㅡ Jekyll을 통해 github page 기반 개발 블로그를 운영할 수 있습니다.</li>
-          <li>ㅡ 개발 블로그의 테마 디자인을 직접 수정하여 사용할 수 있습니다.</li>
-        </ul>
-      </div>
-
-      <div class="aboutme_stack_cards">
-        <img src="./img/Badge_Javascript.png">
-        <span class="aboutme_badge_name">Javascript</span>
-
-        <ul class="aboutme_badge_desc badge-right2">
-          <li>ㅡ 개발하고자 하는 웹 페이지의 동작을 구현 할 수 있습니다.</li>
-          <li>ㅡ AngularJS, React.JS를 활용하여 동적인 웹페이지를 구현 할 수 있습니다.</li>
-          <li>ㅡ 개발문서를 읽고 원하는 기능을 개발할 수 있습니다.</li>
-        </ul>
-      </div>
-
-      <div class="aboutme_stack_cards">
-        <img src="./img/Badge_nodejs.png">
-        <span class="aboutme_badge_name">Node.js</span>
-
-        <ul class="aboutme_badge_desc badge-right2">
-          <li>ㅡ NodeJS로 RestAPI 백엔드 서버를 구축할 수 있습니다.</li>
-          <li>ㅡ 어플리케이션 DB 서버와 개발자 대시보드를 구현 할 수 있습니다.</li>
-          <li>ㅡ 웹소켓을 이용한 IP 프로토콜 서버를 구축 할 수 있습니다.</li>
-        </ul>
-      </div>
-
-      <div class="aboutme_stack_cards">
-        <img src="./img/Badge_Python.png">
-        <span class="aboutme_badge_name">Python</span>
-
-        <ul class="aboutme_badge_desc badge-right">
-          <li>ㅡ PyQT, tkinter 라이브러를 활용해 GUI프로그램을 개발 할 수 있습니다.</li>
-          <li>ㅡ OpenCV 라이브러리를 이용해 CV문제를 해결 할 수 있습니다.</li>
-          <li>ㅡ Python 프로젝트를 분석하여 다른 프로그래밍 언어로 컨버팅 할 수 있습니다.</li>
-        </ul>
+  <div class="aboutme_section">
+    <div class = "aboutme_project_section">
+      <div class="aboutme_section_title">메인 프로젝트</div>
+      <div class="aboutme_project_center_div">
+      {% assign main_p = site.data.main_project %}
+      {% for p in main_p %}
+      <a href = "{{ p.url }}">
+      <div class = "aboutme_project_card">
+        <div class="aboutme_project_card_main">
+          <div class="aboutme_project_card_img">
+            <div class="aboutme_project_card_img_dark"></div>
+            <div class="aboutme_proejct_card_real_img" style="background:url({{ p.img }});background-position: center center; background-size: cover;"></div>
+          </div>
+          <div class="aboutme_project_card_text">
+            <span class="aboutme_project_card_title">{{ p.name }}</span>
+            <span class="aboutme_project_card_desc">{{ p.desc }}</span>
+            {% for k in p.keyword %}
+            <span class="aboutme_project_card_keyword">{{ k }}</span>
+            {% endfor %}
+          </div>
+        </div>
+      </div> </a>
+      {% endfor %}
       </div>
     </div>
   </div>
 
   <div class="aboutme_section">
-    <div class = "aboutme_extra_section">
-      <div class="aboutme_section_title">진행한 프로젝트</div>
-      작성중
-    </div>
-  </div>
-
-  <div class="aboutme_section">
-    <div class = "aboutme_extra_section">
+    <div class = "aboutme_thesis_section">
       <div class="aboutme_section_title">국내 및 해외 논문</div>
-      작성중
+      <table class="aboutme_thesis_table">
+        <tr class="aboutme_thesis_table_head"> <td>제목</td> <td>기관명</td> <td>발행일</td> <td>분류</td> </tr>
+        {% assign thesis = site.data.thesis %}
+        {% for paper in thesis %}
+        <tr class="aboutme_thesis_table_tr">
+          {% if paper.url != "" %}
+          <td><a href="{{ paper.url }}">{{ paper.name }}</a></td>
+          {% else %} <td>{{ paper.name }}</td> {% endif %}
+          <td>{{ paper.org }}</td> <td>{{ paper.date }}</td> <td>{{ paper.type }}</td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
   </div>
 
   <div class="aboutme_section">
     <div class = "aboutme_extra_section">
-      <div class="aboutme_section_title">개인 프로젝트</div>
+      <div class="aboutme_section_title">다른 프로젝트</div>
       작성중
     </div>
   </div>
@@ -299,7 +222,7 @@
               <span class="aboutme_extra_card_sub">컨텐츠 제작 동호회</span>
               <span class="aboutme_extra_card_role">테크니션</span>
               <span class="aboutme_extra_card_period">2018.01 - 2018.06</span>
-              <span class="aboutme_extra_card_desc">"추리게임 : 폴리스라인 안으로"의 기술 소품담당</span>
+              <span class="aboutme_extra_card_desc">"추리게임 : 폴리스라인 안으로"의 기술 소품 및 백그라운드 서버담당</span>
             </td>
           </tr>
         </table>
