--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,3 +1,8 @@
+/*=======================================================================================
+  최상단 파트
+=======================================================================================*/
+img {padding:0; margin: 0;}
+
 .aboutme{
   font-family: 'Noto Sans KR';
   font-weight: 400;
@@ -105,6 +110,13 @@
   margin-right: 10px;
 }
 
+
+
+
+
+/*=======================================================================================
+  자기 소개 파트
+=======================================================================================*/
 .text_badge {
   font-size: 12px;
   display: inline-block;
@@ -202,6 +214,14 @@
   float: none;
 }
 
+
+
+
+/*=======================================================================================
+  학력 및 경력 사항 파트
+=======================================================================================*/
+
+
 .aboutme_edu_table {
   width: 100%;
   border-collapse: collapse;
@@ -238,6 +258,14 @@
   margin-bottom: 10px;
 }
 
+
+
+
+
+/*=======================================================================================
+  기술 스택 파트
+=======================================================================================*/
+
 .aboutme_stack_cards {
   width: 11.5%;
   margin-left: 0.4%;
@@ -258,7 +286,7 @@
 
 .aboutme_badge_desc {
   display: none;
-  z-index: 99;
+  z-index: 30;
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.79);
   color:white;
@@ -295,12 +323,10 @@
       transform: translate(-50%,0%);
       position: fixed;
       top:auto !important;
-      bottom:30px !important;
+      bottom:0px !important;
     }
   }
 }
-
-
 
 .badge-left {
   transform: translate(0%,-50%);
@@ -322,6 +348,299 @@
   transform: translate(-50%,-50%);
 }
 
+
+/*=======================================================================================
+  메인 프로젝트 파트
+=======================================================================================*/
+
+.aboutme_project_center_div {
+  margin-top: 30px;
+  text-align: center; align-items: center;
+}
+
+.aboutme_project_card {
+  width: calc(33% - 10px);
+  margin-left: 8px;
+  margin-bottom: 15px;
+  text-align: left;
+  align-items: left;
+  display: inline-block;
+  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.57);
+  background-color: #f1f1f1;
+  border-radius: 4px;
+  overflow: hidden;
+  height: 410px;
+
+  @media (min-width: 1920px) {min-height: 410px;}
+  @media (max-width: 1630px) {width: calc(50% - 10px); height: 440px;}
+  @media (max-width: 1436px) {width: calc(50% - 10px); height: 403px;}
+  @media (max-width: 1200px) {width: calc(50% - 10px); height: 460px;}
+  @media (max-width: 970px) {width: calc(50% - 10px); height: 410px;}
+  @media (max-width: 560px) {width: calc(50% - 10px); height: 420px;}
+  @media (max-width: 485px) { height: 420px; width: 100%; margin-left:0px; margin-bottom: 20px;}
+}
+
+.aboutme_project_card:hover {
+  .aboutme_project_card_main
+  .aboutme_project_card_img
+  .aboutme_proejct_card_real_img {
+    transform: scale(1.2);
+  }
+
+  .aboutme_project_card_main
+  .aboutme_project_card_img
+  .aboutme_project_card_img_dark {
+    opacity: 0.2;
+
+    @media (max-width: 1200px) { opacity: 0; }
+  }
+}
+
+.aboutme_project_card {
+  position: relative;
+}
+
+.aboutme_project_card_img_dark {
+  z-index: 2;
+  background: #000000;
+  opacity: 0.6;
+  @media (max-width: 1200px) { opacity: 0; }
+}
+
+.aboutme_project_card_task {
+  font-size: 12px;
+}
+
+.aboutme_project_card_keyword_wrap {
+  position: absolute;
+  width: calc(100% - 20px);
+  left:20px;
+  bottom:20px;
+}
+
+.aboutme_project_card_img {
+  display: block;
+  position: relative;
+  width: 100%;
+  margin-top: 0 !important;
+  overflow: hidden;
+}
+
+.aboutme_project_card_img:after {
+  content: "";
+  display: block;
+  padding-bottom: 50%;
+}
+
+.aboutme_project_card_img_dark,.aboutme_proejct_card_real_img {
+  transition: 0.3s;
+  position: absolute;
+background-position: center center; background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.aboutme_project_card_text {
+  padding : 20px;
+}
+
+.aboutme_project_card_title {
+  font-size: 23px;
+  color:$primary;
+  font-weight: 500;
+  margin-bottom: 15px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #dbdbdb;
+}
+
+.aboutme_project_card_desc {
+  font-size: 14px;
+  color : $grey-7;
+  font-weight: 300;
+}
+
+.aboutme_project_card_keyword {
+  margin-top: 10px;
+  font-size: 13px;
+  padding : 2px 10px;
+  border-radius: 3px;
+  background-color: $primary;
+  color:white;
+  display: inline-block !important;
+  font-weight: 300;
+  opacity: 0.8;
+}
+
+.aboutme_project_card_text span {
+  display: block;
+}
+
+
+
+
+
+/*=======================================================================================
+  국내 및 해외 논문 파트
+=======================================================================================*/
+
+.aboutme_thesis_table_head td {
+  text-align: center;
+  border-bottom: 1px solid $grey-8;
+}
+
+.aboutme_thesis_table_tr td:first-child {padding-left: 10px;}
+
+.aboutme_thesis_table tr td:nth-child(2) {
+  width: 110px;
+  text-align: center;
+
+  @media (max-width: $break-small) {
+    width: 55px;
+  }
+}
+
+.aboutme_thesis_table tr td:nth-child(3),
+.aboutme_thesis_table tr td:nth-child(4) {
+  width: 80px;
+  text-align: center;
+
+  @media (max-width: $break-small) {
+    width: 50px;
+  }
+}
+
+.aboutme_thesis_table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing:0px;
+}
+
+.aboutme_thesis_table td {
+  padding:5px;
+}
+
+.aboutme_thesis_table_tr {
+
+  @media (max-width: $break-small) {
+    font-size: 10px;
+  }
+}
+
+.aboutme_thesis_table_tr:nth-child(even) {
+  background-color: #fAfAfA;
+}
+
+/*=======================================================================================
+  다른 프로젝트 파트
+=======================================================================================*/
+.aboutme_other_project_div {
+  padding: 15px 0px;
+  border-top: 1px solid #e4e4e4;
+  position: relative;
+  word-break: break-all !important;
+}
+
+.aboutme_other_project_div:last-child {border-bottom : 1px solid #e4e4e4;}
+
+
+.aboutme_other_project_img_td, .aboutme_other_project_text_td  {
+  display: inline-block;
+}
+
+.aboutme_other_project_img_td {width: 215px !important; padding:0px 20px 10px 5px; position:absolute; top:15;}
+.aboutme_other_project_img { width: 190px;}
+.aboutme_other_project_text_td {position:relative;padding-left: 218px; min-height: 200px;}
+@media (max-width:$break-small) {
+  .aboutme_other_project_img_td {width: 130px !important;}
+  .aboutme_other_project_img {width: 105px !important;}
+  .aboutme_other_project_text_td {padding-left: 133px;}
+}
+
+
+
+.aboutme_other_project_text_td span {display: block;}
+
+.aboutme_other_project_language_platform_div span,
+.aboutme_other_project_public , .aboutme_other_project_private
+{ display: inline-block !important;}
+
+.aboutme_other_project_ref_div {
+  width: 10%;
+  display: inline-block;
+  padding-top : 10px;
+  padding-bottom : 0px;
+  transition: 0.3s;
+  @media (max-width: 670px) {
+    width: 30%;
+    padding-top : 0px;
+    padding-bottom : 0px;
+  }
+}
+
+@media (min-width: 670px) {
+  .aboutme_other_project_ref_div:hover {
+    padding-bottom : 10px;
+    padding-top : 0px;
+  }
+}
+
+.aboutme_other_project_title {
+  font-size: 24px;
+  color:$primary-dark;
+  font-weight: 600;
+}
+
+.aboutme_other_project_public, .aboutme_other_project_private {
+  text-transform: uppercase;
+  padding: 0px 14px;
+  border-radius: 5px;
+  color : white;
+  font-size: 15px;
+  margin-left: -10px;
+  transform: scale(0.7);
+  opacity: 0.8;
+  display: inline-block !important;
+}
+.aboutme_other_project_public {background-color: rgb(39, 72, 107);}
+.aboutme_other_project_private {background-color: rgb(107, 39, 59);}
+
+.aboutme_other_project_short_desc {color:$primary}
+
+.aboutme_other_project_desc {
+  color: $grey-8; font-size: 13px; margin-top: 10px;
+  @media (max-width: 670px) { font-size:12px; margin-top: 5px;}
+}
+
+.aboutme_other_project_git_a {display: block;}
+
+.text_badge2 { border-radius: 6px; overflow: hidden; width: 150px; margin-top: 5px; margin-bottom: -5px;}
+.text_badge_content2 { padding:0px 0px 0px 40px; }
+.aboutme_other_project_warning {
+  display: inline-block !important;
+  background: rgb(234, 216, 247);
+  padding: 0 12px;
+  font-size: 13px;
+  margin-top: 5px;
+  @media (max-width: 670px) { padding: 5px 12px; }
+}
+
+.aboutme_other_project_language, .aboutme_other_project_platform {
+  padding: 0px 14px;
+  border-radius: 5px;
+  color : white;
+  font-size: 11px;
+  display: inline-block !important;
+}
+.aboutme_other_project_language {background-color: $primary; }
+.aboutme_other_project_platform {background-color: rgb(159, 159, 159); }
+.aboutme_other_project_ref_wrap_div {
+  text-align:right;
+  @media (max-width: 670px) { text-align:left; padding-top: 10px;}
+}
+
+/*=======================================================================================
+  대외 활동 파트
+=======================================================================================*/
 .aboutme_extra_card {
   width: 48%;
   height: 200px;
@@ -393,158 +712,4 @@
     height: calc(150px - 6px);
     margin-top: 10px !important;
   }
-}
-
-.aboutme_project_center_div {
-  margin-top: 30px;
-  text-align: center; align-items: center;
-}
-
-.aboutme_project_card {
-  width: calc(33% - 10px);
-  margin-left: 8px;
-  margin-bottom: 15px;
-  text-align: left;
-  align-items: left;
-  display: inline-block;
-  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.57);
-  background-color: #f1f1f1;
-  border-radius: 12px;
-  overflow: hidden;
-  height: auto;
-
-  @media (min-width: 1920px) {min-height: 330px;}
-  @media (max-width: 1630px) {width: calc(50% - 10px); height: 360px;}
-  @media (max-width: 1620px) {width: calc(50% - 10px); height: auto;}
-  @media (max-width: 1436px) {width: calc(50% - 10px); height: 323px;}
-  @media (max-width: 1303px) {width: calc(50% - 10px); height: auto;}
-  @media (max-width: 970px) {width: 100%; margin-left:0px; margin-bottom: 20px;}
-}
-
-.aboutme_project_card:hover {
-  .aboutme_project_card_main
-  .aboutme_project_card_img
-  .aboutme_proejct_card_real_img {
-    transform: scale(1.2);
-  }
-
-  .aboutme_project_card_main
-  .aboutme_project_card_img
-  .aboutme_project_card_img_dark {
-    opacity: 0.2;
-
-    @media (max-width: 970px) { opacity: 0; }
-  }
-}
-
-.aboutme_project_card_img_dark {
-  z-index: 2;
-  background: #000000;
-  opacity: 0.6;
-  @media (max-width: 970px) { opacity: 0; }
-}
-
-.aboutme_project_card_img {
-  display: block;
-  position: relative;
-  width: 100%;
-  margin-top: 0 !important;
-  background: red;
-  overflow: hidden;
-}
-
-.aboutme_project_card_img:after {
-  content: "";
-  display: block;
-  padding-bottom: 50%;
-}
-
-.aboutme_project_card_img_dark,.aboutme_proejct_card_real_img {
-  transition: 0.3s;
-  position: absolute;
-background-position: center center; background-size: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.aboutme_project_card_text {
-  padding : 20px;
-}
-
-.aboutme_project_card_title {
-  font-size: 23px;
-  color:$primary;
-  font-weight: 500;
-  margin-bottom: 15px;
-  padding-bottom: 5px;
-  border-bottom: 1px solid #dbdbdb;
-}
-
-.aboutme_project_card_desc {
-  font-size: 14px;
-  color : $grey-7;
-  font-weight: 300;
-}
-
-.aboutme_project_card_keyword {
-  margin-top: 10px;
-  font-size: 13px;
-  padding : 2px 10px;
-  border-radius: 3px;
-  background-color: $primary;
-  color:white;
-  display: inline-block !important;
-  font-weight: 300;
-  opacity: 0.8;
-}
-
-.aboutme_project_card_text span {
-  display: block;
-}
-
-.aboutme_thesis_table_head td {
-  text-align: center;
-  border-bottom: 1px solid $grey-8;
-}
-
-.aboutme_thesis_table_tr td:first-child {padding-left: 10px;}
-
-.aboutme_thesis_table tr td:nth-child(2) {
-  width: 110px;
-  text-align: center;
-
-  @media (max-width: $break-small) {
-    width: 55px;
-  }
-}
-
-.aboutme_thesis_table tr td:nth-child(3),
-.aboutme_thesis_table tr td:nth-child(4) {
-  width: 80px;
-  text-align: center;
-
-  @media (max-width: $break-small) {
-    width: 50px;
-  }
-}
-
-.aboutme_thesis_table {
-  width: 100%;
-  border-collapse: collapse;
-  border-spacing:0px;
-}
-
-.aboutme_thesis_table td {
-  padding:5px;
-}
-
-.aboutme_thesis_table_tr {
-
-  @media (max-width: $break-small) {
-    font-size: 10px;
-  }
-}
-
-.aboutme_thesis_table_tr:nth-child(even) {
-  background-color: #fAfAfA;
 }
