--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
     <div class="logo">
       <a href="{{ '' | prepend: site.baseurl }}/">
         <img src="/meta/logo.png">
-        <span>영찬의 기술블로그</span>
+        <span>영찬의 개발 블로그</span>
       </a>
     </div>
 
