update extra activity video

--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -182,7 +182,7 @@
   <div class="aboutme_section">
     <div class = "aboutme_extra_section">
       <div class="aboutme_section_title">다른 프로젝트</div>
-      {% assign projects = site.data.other_project%}
+      {% assign projects = site.data.other_project %}
       {% for p in projects %}
       <div class="aboutme_other_project_div">
         <div class="aboutme_other_project_img_td">
@@ -232,7 +232,7 @@
   </div>
 
   <div class="aboutme_section">
-    <div class = "aboutme_toy_section">
+    <div class = "aboutme_open_section">
       <div class="aboutme_section_title">오픈소스</div>
       작성중
     </div>
@@ -275,6 +275,17 @@
         </table>
       </div>
     </div>
+
+    <div class="aboutme_edu_subtitle">활동 기록</div>
+    {% assign activity = site.data.extra_activity %}
+    {% for a in activity %}
+    <a href="{{ a.url }}" target="blank"><div class="aboutme_activity_video">
+      <img src="{{ a.img }}" alt="" class="aboutme_activity_video_thumbnail">
+      <div class="aboutme_activity_video_black"></div>
+      <span class="aboutme_activity_video_name">{{ a.name }}</span>
+      <img src="./img/Play.png" alt="" class="aboutme_activity_video_play_button">
+    </div></a>
+    {% endfor %}
   </div>
 
   <div class="aboutme_section">
