--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -713,3 +713,52 @@ background-position: center center; background-size: cover;
     margin-top: 10px !important;
   }
 }
+
+.aboutme_activity_video {
+  width: calc(33% - 10px);
+  overflow: hidden;
+  border-radius: 8px;
+  position: relative;
+  display: inline-block !important;
+}
+
+@media (max-width:$break-small) {
+  .aboutme_activity_video {
+    width: calc(50% - 3px);
+  }
+}
+
+.aboutme_activity_video_play_button {
+  width: 20%;
+  opacity: 0.8;
+  transition: 0.3s;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left:50%;
+  top:50%;
+}
+
+.aboutme_activity_video_play_button:hover { opacity: 0.3; }
+
+.aboutme_activity_video_name {
+  position: absolute;
+  font-size: 15px;
+  font-weight: 500;
+  color:white;
+  top:10px;
+  left:10px;
+}
+
+.aboutme_activity_video_black {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  top:0; left:0;
+  transition: 0.3s;
+}
+
+.aboutme_activity_video:hover {
+  .aboutme_activity_video_play_button { opacity: 0.7; }
+  .aboutme_activity_video_black {background-color: rgba(0, 0, 0, 0.4);}
+}
