update life page

--- a/_includes/mention.html
+++ b/_includes/mention.html
@@ -3,7 +3,7 @@
 <div class="branch_point"></div>
 <div class="thumbnail">
   {% assign thumbnail = site.static_files | where: 'basename', writer.id | first %}
-  <img class="profile" src="{{ thumbnail.path }}"/>
+  <img class="profile" src="https://avatars.githubusercontent.com/u/40852277"/>
   <div class="emoji"><span>{{ writer.emoji }}</span></div>
 </div>
 <div class="content_wrap">
