--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <address class="footer_wrap">
         <div class="copyright">
-            © CJ OliveYoung. All rights reserved. Powered by GitHub Pages.
+            © KimYC1223 Developer blog. Powered by GitHub Pages.
         </div>
     </address>
 </footer>
