update stack graph

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -265,6 +265,10 @@ img {padding:0; margin: 0;}
 /*=======================================================================================
   기술 스택 파트
 =======================================================================================*/
+.aboutme_stack_graph {
+  width: 100%;
+  height: 300px;
+}
 
 .aboutme_stack_cards {
   width: 11.5%;
