--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -1,3 +1,5 @@
+
+
 <div class="aboutme">
   <div class = "aboutme_picture">
     <img src="https://avatars.githubusercontent.com/u/40852277">
@@ -113,6 +115,8 @@
   <div class="aboutme_section">
     <div class = "aboutme_edu">
       <div class="aboutme_section_title">기술 스택</div>
+
+      {% include stack_graph.html %}
 
       {% assign stacks = site.data.stack%}
       {% for stack in stacks %}
