--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -1,7 +1,12 @@
-.projects_MainDiv {
+.proejcts_MainDivWarpper {
     width: 100%;
     height: calc(100vh - 200px);
-    line-height: 100%;
+    position: relative;
+}
+
+.projects_MainDiv {
+    width: 100%;
+    height: 100%;
     overflow: scroll;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
@@ -11,18 +16,31 @@
     display: none;
 }
 
-.projects_test {
+.projects_Wrapper {
     width: 100%;
     height: 100%;
     line-height: 100%;
     position: relative;
     transition: all 1s cubic-bezier(0.340, -0.600, 0.515, 1.570);
-    opacity: 1;
-    background-color: aqua;
+    overflow: hidden;
 }
 
-.projects_active:nth-child(2n) {
-    background-color: brown;
+.projects_centerDiv {
+    position: absolute;
+    opacity: 0;
+    width: 100%;
+    height: calc(100% - 100px);
+    top:-100%;
+    transition: 1s;
+    font-size: 20px;
+    padding : 20px;
+    padding-bottom: 60px;
+    margin-bottom: 20px;
+}
+
+.projects_active .projects_centerDiv {
+    opacity: 1;
+    top: 50%;
 }
 
 .projects_centerDiv {
@@ -33,3 +51,51 @@
 }
 
 .scrollOff{position:fixed;overflow:hidden;}
+
+.projects_controller {
+    display: block;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    position:absolute;
+    bottom: 0px;
+    z-index: 30;
+    text-align: center;
+}
+
+.projects_buttons {
+    color: $grey-2;
+    font-size: 10px;
+    margin-right: 10px;
+    transition: 0.2s;
+    
+    line-height: 30px;
+    cursor:pointer
+}
+
+.projects_buttons:last-child {margin-right: 0px;}
+
+.projects_buttons_select {
+    color: $grey-1 !important;
+    font-size: 15px;
+}
+
+
+@media (max-width: $break-small) {
+    .proejcts_MainDivWarpper {
+        height: calc(100vh - 250px);
+    }
+
+    .projects_controller {
+        height: 15px;
+        line-height: 15px;
+    }
+
+    .projects_buttons {
+        font-size: 6px;
+    }
+    
+    .projects_buttons_select {
+        font-size: 10px;
+    }
+}
